--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "node server.js",
-     "dev": "nodemon server.js",
-     "test": "echo \"Error: no test specified\" && exit 1"
-   },
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,7 +18,9 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
-    "socket.io": "^4.8.3"
+    "nodemailer": "^7.0.12",
+    "socket.io": "^4.8.3",
+    "twilio": "^5.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
